@@ -43,6 +43,7 @@
   - Fix version 0 not installing on web site. BZ #702550
   - Don't validate xml parsed as text in print_unused. BZ #705956
   - Fix admonition layout. BZ #715158
+  - Add manual_toc_update config for web-sites. BZ #719573
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
